Migrate from jsbuild to Maven YUI compressor plugin. Keep jsbuild conf in script directory. Fix reserved word in JS (Thanks JSLint) Fix missing dependencies (FOP and Upload).
git-svn-id: https://geonetwork.svn.sourceforge.net/svnroot/geonetwork/trunk@6185 ff403467-3f20-0410-99e5-ff581e626a08